--- a/build-ble_tools-Desktop_Qt_5_8_0_MinGW_32bit-Debug/Makefile.Debug
+++ b/build-ble_tools-Desktop_Qt_5_8_0_MinGW_32bit-Debug/Makefile.Debug
@@ -518,13 +518,14 @@ debug/ble_tools.o: ../ble_tools/ble_tools.cpp ../ble_tools/ble_tools.h \
 		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QDateEdit \
 		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qdatetimeedit.h \
 		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtCore/qdatetime.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QGridLayout \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qgridlayout.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qlayout.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qlayoutitem.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qboxlayout.h \
 		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QGroupBox \
 		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qgroupbox.h \
 		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QHBoxLayout \
-		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qboxlayout.h \
-		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qlayout.h \
-		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qlayoutitem.h \
-		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qgridlayout.h \
 		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QHeaderView \
 		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qheaderview.h \
 		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qabstractitemview.h \
